# mes_homework

./: README.md
week_3/: README.md
week_3/ADAFRUIT_TRINKET_M0/: README.md
week_3/STM32L152_DISCO/: .cproject  .mxproject  .project  README.md  STM32L152RCTX_FLASH.ld  STM32L1_1_BareBlink Debug.cfg  STM32L1_1_BareBlink Debug.launch  STM32L1_1_BareBlink.ioc  STM32L1_1_BareBlink.launch
week_3/STM32L152_DISCO/Core/Inc/: main.h
week_3/STM32L152_DISCO/Core/Src/: main.c  stm32l1xx_hal_msp.c
week_3/STM32L152_DISCO/Debug/: STM32L1_1_BareBlink.elf  STM32L1_1_BareBlink.list  STM32L1_1_BareBlink.map  makefile  objects.list
week_3/STM32L152_DISCO/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l1xx_hal_msp.cyclo  stm32l1xx_hal_msp.d  stm32l1xx_hal_msp.su  stm32l1xx_it.d  subdir.mk  system_stm32l1xx.d
week_3/STM32L152_DISCO/Debug/Core/Startup/: subdir.mk
week_3/STM32L152_DISCO/Debug/Drivers/STM32L1xx_HAL_Driver/Src/: stm32l1xx_hal.d  stm32l1xx_hal_cortex.d  stm32l1xx_hal_dma.d  stm32l1xx_hal_exti.d  stm32l1xx_hal_flash.cyclo  stm32l1xx_hal_flash.d  stm32l1xx_hal_flash_ex.cyclo  stm32l1xx_hal_gpio.d  (+11 more)
week_5/: .gitignore  CMakeLists.txt  README.MD  build.sh
week_5/src/: CMakeLists.txt  main.c
week_5/src/lib/: CMakeLists.txt
week_5/src/lib/blinky/: CMakeLists.txt  blinky.c
week_5/src/lib/blinky/include/: blinky.h
week_5/src/lib/console/: CMakeLists.txt  console.c  consoleCommands.c  consoleIo.c
week_5/src/lib/console/include/: console.h  consoleCommands.h
week_5/src/lib/led/: CMakeLists.txt  led.c
week_5/src/lib/led/include/: led.h
week_7/: README.MD
